# test-app

./: Dockerfile  pyproject.toml
.github/workflows/: release.yml
app/: main.py
app/static/: styles.css
app/templates/: index.html
charts/test-app/: Chart.yaml  values.yaml
charts/test-app/templates/: deployment.yaml
